--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
+spring.datasource.driverClassName = com.mysql.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost:3306/hibernate_example
 spring.datasource.username = root
 spring.datasource.password = Minakaram*20
@@ -8,3 +8,5 @@ spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql = true
 
 spring.thymeleaf.cache = false
+
+
